<resources>
    <string name="app_name">AMP</string>
    <string name="TypeOfEnvironment">Type Of Environment</string>
    <string name="TypeAmperage">Type Amperage</string>
    <string name="NumberOfCore">Number Of Core</string>
    <string name="MaterialType">Material Type</string>
    <string name="InsulationType">InsulationType</string>
    <string name="MethodOfLaying">Method Of Laying</string>
    <string name="EquivalentSection">Equivalent Section</string>
    <string name="Resistance_r_ohm_km">Resistance_r_ohm_km</string>
    <string name="Resistance_x_ohm_km">Resistance_x_ohm_km</string>
    <string name="ConductorCrossSection">Conductor Cross Section</string>
    <string name="HINT0">0</string>
    <string name="CountPhase">Count Phase</string>
    <string name="Voltage">Voltage</string>
    <string name="cos_phi">Cos (phi)</string>
    <string name="odin">1</string>
    <string name="power">Power</string>
    <string name="raschetniytok">Current</string>
    <string name="cable">Cable</string>
    <string name="amperage">Amperage</string>
    <string name="title_activity_extended" translatable="false">ActivityExtendet</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="NominalSize">NominalSize</string>
    <string name="StandartVoltage" translatable="false">380</string>
    <string name="getCable">Get Cable</string>
    <string name="r" translatable="false">R=</string>
    <string name="x" translatable="false">X=</string>
    <string name="ExtendedMode">Extended Mode</string>
    <string name="amperageShort">amperageShort</string>
    <string name="gotomainactivity" translatable="false">Перейти в main Активити</string>
</resources>